--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+	"scripts": {
+		"start": "node index.js",
+		"dev": "nodemon index.js"
+	},
+	"engines": {
+		"node": "14.x"
+	},
 	"dependencies": {
 		"@apollo/server": "^4.9.3",
 		"body-parser": "^1.20.2",
@@ -9,8 +16,5 @@
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^7.5.0",
 		"nodemon": "^3.0.1"
-	},
-	"scripts": {
-		"start": "nodemon index.js"
 	}
 }
