--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+	"name": "irtaqi_api",
+	"version": "1.0.0",
+	"main": "index.js",
+	"devDependencies": {},
+	"author": "",
+	"license": "ISC",
+	"description": "",
 	"scripts": {
 		"start": "node index.js",
 		"dev": "nodemon index.js"
