--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
 	},
 	"dependencies": {
 		"@apollo/server": "^4.9.3",
+		"apollo-server-express": "^3.12.1",
 		"body-parser": "^1.20.2",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
+		"graphql": "^16.8.0",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^7.5.0",
 		"nodemon": "^3.0.1"
