--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
 	},
 	"dependencies": {
 		"@apollo/server": "^4.9.3",
+		"@graphql-tools/schema": "^10.0.0",
 		"apollo-server-express": "^3.12.1",
 		"body-parser": "^1.20.2",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"graphql": "^16.8.0",
+		"graphql-subscriptions": "^2.0.0",
+		"graphql-ws": "^5.14.0",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^7.5.0",
-		"nodemon": "^3.0.1"
+		"nodemon": "^3.0.1",
+		"ws": "^8.14.2"
 	}
 }
