--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 	"description": "",
 	"scripts": {
 		"start": "node index.js",
-		"dev": "nodemon index.js"
+		"dev": "nodemon index.js",
+		"test": "jest --watchAll"
 	},
 	"engines": {
 		"node": "18.x"
@@ -26,5 +27,8 @@
 		"mongoose": "^7.5.0",
 		"nodemon": "^3.0.1",
 		"ws": "^8.14.2"
+	},
+	"devDependencies": {
+		"jest": "^29.7.0"
 	}
 }
