--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
 		"graphql-ws": "^5.14.0",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^7.5.0",
+		"multer": "^1.4.5-lts.1",
 		"nodemon": "^3.0.1",
+		"path": "^0.12.7",
 		"ws": "^8.14.2"
 	},
 	"devDependencies": {
